--- a/self/self.html
+++ b/self/self.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 
   <link rel="stylesheet" href="./self.css">
   <title>Document</title>
 </head>
+
 <body>
   <div id="routerView" data-animationName="slide">
     <div class="page" data-hash="/home">
@@ -18,7 +21,6 @@
         <script type="text/javascript">
           window.home = function (route) {
             console.log('home:', route)
-            var str1 = "<div><a class='back' onclick='window.history.go(-1)'>返回</a></div> <h2>首页</h2> <input type='text'> <div><a href='#/list' >列表1</div></div><div class='height'>内容占位</div>"
             var str =
               "<div><a class='back' onclick='window.history.go(-1)'>返回</a></div> <div><h2 href='javascript:void(0);' onclick='linkTo(\"#/list\")'>跳转到列表list</h2></div><div class='height'>内容占位</div>"
             document.querySelector("#home").innerHTML = str
@@ -70,33 +72,68 @@
       </div>
     </div>
   </div>
+  <!-- <script type="text/javascript" src="./self1.js"></script> -->
   <script type="text/javascript" src="./self.js"></script>
   <script type="text/javascript">
-  var config = {
+    var config = {
       routerViewId: '#routerView', // 路由切换的挂载点 id
       stackPages: true, // 多级页面缓存
       animationName: "slide", // 多级页面缓存
       routes: [{
-        path: "/home",
-        name: "home",
-        callback: function (transition) {
-          console.log(home)
-          home()
-        }
-      }]
+          path: "/home",
+          name: "home",
+          callback: function (transition) {
+            // console.log(home)
+            home()
+          }
+        },
+        {
+          path: "/list",
+          name: "list",
+          callback: function (transition) {
+            // console.log(home)
+            list()
+          }
+        },
+        {
+          path: "/detail",
+          name: "detail",
+          callback: function (transition) {
+            // console.log(home)
+            detail()
+          }
+        },
+        {
+          path: "/detail2",
+          name: "detail2",
+          callback: function (transition) {
+            // console.log(home)
+            detail2()
+          }
+        },
+      ]
     }
 
     router.init(config)
-    // router.beforeEach(function (transition) {
-    //   console.log('切换之 前 dosomething', transition)
-    //   setTimeout(function () {
-    //     //模拟切换之前延迟，比如说做个异步登录信息验证
-    //     transition.next()
-    //   }, 100)
-    // })
-    // router.afterEach(function (transition) {
-    //   console.log("切换之 后 dosomething", transition)
-    // })
+    //  {
+    //   to: {
+    //     path: currentHash.path,
+    //     query: currentHash.query
+    //   },
+    //   next() {
+    //     self.changeView(currentHash)
+    //   }
+    // }
+    router.beforeEach(function (transition) {
+      // console.log('切换之 前 dosomething', transition)
+      setTimeout(function () {
+        //模拟切换之前延迟，比如说做个异步登录信息验证
+        transition.next()
+      }, 100)
+    })
+    router.afterEach(function (transition) {
+      console.log("切换之 后 dosomething", transition)
+    })
 
     // rem 单位适配
     var width = window.screen.width
